--- a/Web.config
+++ b/Web.config
@@ -326,6 +326,15 @@
         </windowsAuthentication>-->
       </authentication>
     </security>
+    <rewrite>
+      <rules>
+        <clear />
+        <rule name="RedirectEditing" enabled="true" stopProcessing="true">
+          <match url="^edit-employee/([_0-9a-z-]+)" />
+          <action type="Rewrite" url="/edit-employee?id={R:1}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <system.identityModel>
     <identityConfiguration>
