--- a/SitefinityWebApp.csproj
+++ b/SitefinityWebApp.csproj
@@ -1098,11 +1098,14 @@
       <DependentUpon>EmployeesList.svc</DependentUpon>
     </Compile>
     <Compile Include="Mvc\Base\JsonContent.cs" />
+    <Compile Include="Mvc\Controllers\AddEmployeeFormController.cs" />
     <Compile Include="Mvc\Controllers\EmployeeControlsController.cs" />
     <Compile Include="Mvc\Controllers\EmployeeListController.cs" />
     <Compile Include="Mvc\Controllers\EmployeeListDPController.cs" />
     <Compile Include="Mvc\Controllers\EmployeeListViewController.cs" />
     <Compile Include="Mvc\Controllers\KendoScriptsController.cs" />
+    <Compile Include="Mvc\Controllers\RedirectionLinkController.cs" />
+    <Compile Include="Mvc\Models\AddEmployeeFormModel.cs" />
     <Compile Include="Mvc\Models\DataModels\DepartmentDetail.cs" />
     <Compile Include="Mvc\Models\DataModels\EmployeeData.cs" />
     <Compile Include="Mvc\Models\DataModels\EmployeeDetail.cs" />
@@ -1111,10 +1114,12 @@
     <Compile Include="Mvc\Models\EmployeeListModel.cs" />
     <Compile Include="Mvc\Models\EmployeeListViewModel.cs" />
     <Compile Include="Mvc\Models\KendoScriptsModel.cs" />
+    <Compile Include="Mvc\Models\RedirectionLinkModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WidgetDesigners\EmployeeListDP\EmployeeListDPDesigner.cs" />
     <Compile Include="WidgetDesigners\EmployeeListView\EmployeeListViewDesigner.cs" />
     <Compile Include="WidgetDesigners\EmployeeList\EmployeeListDesigner.cs" />
+    <Compile Include="WidgetDesigners\RedirectionLink\RedirectionLinkDesigner.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientBin\Telerik.Sitefinity.Analytics.xap" />
@@ -2044,6 +2049,7 @@
     <Content Include="App_Data\Sitefinity\WebsiteTemplates\SitefinityWebApp\Kendo\styles\Uniform\sprite_2x.png" />
     <Content Include="App_Data\Sitefinity\WebsiteTemplates\SitefinityWebApp\Kendo\styles\Uniform\sprite_kpi.png" />
     <Content Include="App_Data\Sitefinity\WebsiteTemplates\SitefinityWebApp\Kendo\styles\Uniform\sprite_kpi_2x.png" />
+    <Content Include="Mvc\Scripts\EmployeeForm.js" />
     <Content Include="Mvc\Scripts\EmployeeListAPI.js" />
     <Content Include="Mvc\Scripts\EmployeeListDP.js" />
     <Content Include="Mvc\Scripts\EmployeeListView.js" />
@@ -2170,6 +2176,8 @@
     <Content Include="WidgetDesigners\EmployeeListView\EmployeeListViewDesigner.js" />
     <Content Include="WidgetDesigners\EmployeeList\EmployeeListDesigner.ascx" />
     <Content Include="WidgetDesigners\EmployeeList\EmployeeListDesigner.js" />
+    <Content Include="WidgetDesigners\RedirectionLink\RedirectionLinkDesigner.ascx" />
+    <Content Include="WidgetDesigners\RedirectionLink\RedirectionLinkDesigner.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\RadSpell\de-DE.tdf" />
@@ -2868,6 +2876,8 @@
     <Content Include="Mvc\Views\EmployeeListDP\index.cshtml" />
     <Content Include="Mvc\Views\EmployeeListDP\_employeeListDP.cshtml" />
     <Content Include="Mvc\Views\EmployeeControls\index.cshtml" />
+    <Content Include="Mvc\Views\RedirectionLink\index.cshtml" />
+    <Content Include="Mvc\Views\AddEmployeeForm\index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
